--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #984f68; }
+  background: #5a5718; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #94ab25; }
+  background: #ef032d; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #5092be; }
+  background: #7355c8; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #997a06; }
+  background: #17acc4; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #cbbff1; }
+  background: #d16721; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #2b7df3; }
+  background: #02d41e; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #e6f697; }
+  background: #afa1cd; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #c4477e; }
+  background: #f4bb9e; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #7f5086; }
+  background: #6ea8cb; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #488f1d; }
+  background: #84f162; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #0adfd0; }
+  background: #d7e155; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #f033b9; }
+  background: #b5c81e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #651e7b; }
+  background: #0dc9c5; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a32a0f; }
+  background: #035c95; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #3d598a; }
+  background: #58627a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #94c6f4; }
+  background: #abd62d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #cc60d5; }
+  background: #8ee5ef; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #d6b852; }
+  background: #601711; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #959617; }
+  background: #ee0fe9; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #1f74ab; }
+  background: #f13297; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #a88d6f; }
+  background: #7c942b; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #6fdbd0; }
+  background: #729599; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #7778bb; }
+  background: #093b79; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #4d7d99; }
+  background: #3e8701; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #69b8cd; }
+  background: #4e727a; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #4d43cc; }
+  background: #d96fdc; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #43628e; }
+  background: #d96b7a; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #fe6687; }
+  background: #6e4b90; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #23e594; }
+  background: #ae5475; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #dcdbff; }
+  background: #857399; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #19e884; }
+  background: #88ee07; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #efd5d7; }
+  background: #5ff503; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #154087; }
+  background: #8eaa67; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #2c3af2; }
+  background: #46018d; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #61f004; }
+  background: #9aa90d; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #8eb50b; }
+  background: #2c4daa; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #2a4dc8; }
+  background: #816f43; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #a1b786; }
+  background: #60a764; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #4b8918; }
+  background: #bdd4f2; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #bbf3f7; }
+  background: #e1bbf0; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #8a10fc; }
+  background: #fe1750; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #cf1134; }
+  background: #ffbfdd; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #652fe1; }
+  background: #d6e9b1; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #68153b; }
+  background: #02a656; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #fd325d; }
+  background: #835760; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b7ca07; }
+  background: #23879d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #5e854f; }
+  background: #9663a2; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #c3bc9a; }
+  background: #8e20f6; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #1fad7b; }
+  background: #e21ec0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #60b2a3; }
+  background: #edd7eb; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #b8766d; }
+  background: #8fc440; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #13fcf8; }
+  background: #b28570; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #090315; }
+  background: #6c9b02; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #e50b68; }
+  background: #92f210; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #9ff1b6; }
+  background: #175ad0; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #3b3f35; }
+  background: #60ad4e; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #c05eb2; }
+  background: #cc490a; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #122a11; }
+  background: #c0c853; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #6812b0; }
+  background: #9a7e5c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #f3a5d3; }
+  background: #76b97c; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a8e3cc; }
+  background: #10a982; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #eaa041; }
+  background: #35a7ec; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #d0abe1; }
+  background: #56d503; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #e8cc38; }
+  background: #c3985b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f03d27; }
+  background: #ba6a5a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #90d417; }
+  background: #81ac83; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #1060e1; }
+  background: #7dd8b5; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #5491f3; }
+  background: #09ce0c; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #70f184; }
+  background: #3cd555; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #4c0f12; }
+  background: #87e417; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #1971b7; }
+  background: #2455bb; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #e49146; }
+  background: #f22491; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #030901; }
+  background: #c8e4de; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #eb08fc; }
+  background: #ae4f95; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #6fc19e; }
+  background: #255bac; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #166c88; }
+  background: #a2fb8a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #3ceac0; }
+  background: #d6cc48; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #93d1d6; }
+  background: #14c662; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #3bede3; }
+  background: #331642; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #ce2f23; }
+  background: #20cece; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #8f9a80; }
+  background: #c0bbc3; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #c0ff7f; }
+  background: #08f451; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #8f484c; }
+  background: #41e6c2; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #12208b; }
+  background: #d15d36; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ee7598; }
+  background: #70615c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #15e88d; }
+  background: #528a78; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #25739b; }
+  background: #9e761b; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #9e81db; }
+  background: #c5368c; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #db8585; }
+  background: #bb8b1e; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #619945; }
+  background: #436259; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #4aeb8c; }
+  background: #b346ef; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #02b4f9; }
+  background: #19a257; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #a92ba4; }
+  background: #4d19d1; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #b4115d; }
+  background: #2e2ac8; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #33f436; }
+  background: #c8c5bd; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #0a11c8; }
+  background: #d429b2; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #846d36; }
+  background: #b25ce6; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #644bb0; }
+  background: #bdb668; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #21e2f3; }
+  background: #288b35; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ff4ea4; }
+  background: #4cbf11; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10576,7 +10576,7 @@ table .bold-heading {
 
 .inner-legend-colors-col {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 155px 1fr;
   align-items: center;
   grid-gap: 20px; }
 
@@ -10604,6 +10604,12 @@ table .bold-heading {
     .widget-checkbox-filter-row .widget-checkbox-filter-box .show-onotop-input {
       padding: 9px 6px !important;
       text-align: center; }
+
+.widget-checkbox-filter-sort-row {
+  display: flex;
+  padding-left: 20px; }
+  .widget-checkbox-filter-sort-row .user-group-checked-row select {
+    background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 95% 13px; }
 
 .checkbox-big {
   height: 38px !important;
