--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8726,205 +8726,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #5a5718; }
+  background: #b7d6d1; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #ef032d; }
+  background: #84614e; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #7355c8; }
+  background: #c725ed; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #17acc4; }
+  background: #1a9a1e; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #d16721; }
+  background: #7f4b0f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #02d41e; }
+  background: #3d7de3; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #afa1cd; }
+  background: #1e4a16; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #f4bb9e; }
+  background: #3da0b9; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #6ea8cb; }
+  background: #926ad7; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #84f162; }
+  background: #85cbf4; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d7e155; }
+  background: #df1376; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #b5c81e; }
+  background: #37b44f; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #0dc9c5; }
+  background: #2552d7; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #035c95; }
+  background: #962703; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #58627a; }
+  background: #43fb8f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #abd62d; }
+  background: #09e99e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #8ee5ef; }
+  background: #ce5293; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #601711; }
+  background: #265ce7; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ee0fe9; }
+  background: #a27b44; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #f13297; }
+  background: #3ca7be; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #7c942b; }
+  background: #6e59ff; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #729599; }
+  background: #96d41b; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #093b79; }
+  background: #db8224; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #3e8701; }
+  background: #a8e657; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #4e727a; }
+  background: #f1a463; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #d96fdc; }
+  background: #f52b67; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #d96b7a; }
+  background: #87942b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #6e4b90; }
+  background: #3fdd5a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #ae5475; }
+  background: #a4d392; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #857399; }
+  background: #bb6173; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #88ee07; }
+  background: #4851cc; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #5ff503; }
+  background: #d12ace; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #8eaa67; }
+  background: #d822dd; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #46018d; }
+  background: #fa7af5; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #9aa90d; }
+  background: #4e3976; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #2c4daa; }
+  background: #d713e7; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #816f43; }
+  background: #a178ea; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #60a764; }
+  background: #085c4b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #bdd4f2; }
+  background: #a5a4f6; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #e1bbf0; }
+  background: #8a3722; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #fe1750; }
+  background: #787321; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #ffbfdd; }
+  background: #e03dcb; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #d6e9b1; }
+  background: #1c2ad7; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #02a656; }
+  background: #762d0b; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #835760; }
+  background: #4860bb; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #23879d; }
+  background: #f642d7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #9663a2; }
+  background: #c642f5; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8e20f6; }
+  background: #b34368; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e21ec0; }
+  background: #b5b81f; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #edd7eb; }
+  background: #69f682; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8fc440; }
+  background: #e9d2d3; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b28570; }
+  background: #0c2a7b; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #6c9b02; }
+  background: #a80e2a; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #92f210; }
+  background: #2cc50e; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #175ad0; }
+  background: #3008b2; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #60ad4e; }
+  background: #330fd0; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #cc490a; }
+  background: #2c560f; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #c0c853; }
+  background: #c7f659; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #9a7e5c; }
+  background: #25339c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #76b97c; }
+  background: #1a8347; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #10a982; }
+  background: #e578b7; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #35a7ec; }
+  background: #beb228; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #56d503; }
+  background: #f4a6d7; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c3985b; }
+  background: #9f2671; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ba6a5a; }
+  background: #ae8e1a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #81ac83; }
+  background: #11e61f; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #7dd8b5; }
+  background: #cb5f78; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #09ce0c; }
+  background: #5dae95; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #3cd555; }
+  background: #f1112c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #87e417; }
+  background: #01ed2c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #2455bb; }
+  background: #609421; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f22491; }
+  background: #b983d2; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c8e4de; }
+  background: #dc9a85; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #ae4f95; }
+  background: #8399e3; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #255bac; }
+  background: #231428; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a2fb8a; }
+  background: #6103cf; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d6cc48; }
+  background: #5ccb49; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #14c662; }
+  background: #28dd54; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #331642; }
+  background: #253ac7; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #20cece; }
+  background: #594231; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #c0bbc3; }
+  background: #62b57b; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #08f451; }
+  background: #f937d3; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #41e6c2; }
+  background: #68b42e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d15d36; }
+  background: #dc6eae; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #70615c; }
+  background: #b0032e; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #528a78; }
+  background: #cb48d1; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #9e761b; }
+  background: #3e3de5; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c5368c; }
+  background: #2fa67e; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #bb8b1e; }
+  background: #10c7da; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #436259; }
+  background: #25792f; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b346ef; }
+  background: #194433; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #19a257; }
+  background: #6172be; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #4d19d1; }
+  background: #21c6d5; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #2e2ac8; }
+  background: #654fa8; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #c8c5bd; }
+  background: #488e91; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #d429b2; }
+  background: #6a111b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b25ce6; }
+  background: #3ef9dc; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #bdb668; }
+  background: #514fc9; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #288b35; }
+  background: #f1a7b1; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #4cbf11; }
+  background: #0dbd7e; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10354,6 +10354,44 @@ table .bold-heading {
   .policy-accordions-box .multi-collapse {
     margin-top: 20px; }
 
+.carousel-inner .dropdown-toggle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background: #fff;
+  padding: 10px 15px;
+  border: 1px solid #CDCDD6;
+  color: #6c757d !important;
+  font-size: 15px !important; }
+
+.carousel-inner .dashboard-title-menu-dropdown {
+  top: -3px !important;
+  width: 100%;
+  border-radius: 0px; }
+
+.carousel-inner .dashboard-title-menu-dropdown a img {
+  width: 10px; }
+
+.carousel-inner .dashboard-title-menu-dropdown a:nth-child(1) {
+  border-bottom: 0px solid #a3a2a2;
+  margin-bottom: 0px; }
+
+.carousel-inner .dashboard-title-menu-dropdown a:last-child {
+  border: 1px solid #776FFF;
+  padding: 8px 9px;
+  margin: 10px 0 6px 24px;
+  width: 136px;
+  text-align: center;
+  border-radius: 4px;
+  color: #776fff; }
+
+.carousel-inner .dropdown-item {
+  font-size: 13px;
+  color: #4c4c4c;
+  padding-top: 10px;
+  padding-bottom: 10px; }
+
 .create-widget-main-wrapper {
   width: 1080px;
   min-height: 500px;
@@ -10438,7 +10476,7 @@ table .bold-heading {
 
 .widget-grid-two-legend-wrapper {
   display: grid;
-  grid-template-columns: 340px auto;
+  grid-template-columns: 321px auto;
   margin-top: 20px;
   grid-gap: 30px; }
 
@@ -10451,17 +10489,44 @@ table .bold-heading {
 
 .legend-box {
   background: #f6f6f6;
-  padding: 40px 20px; }
+  padding: 20px; }
 
 .legend-box-heading {
   font-size: 16px;
   line-height: 23px;
-  text-align: center;
   color: #4c4c4c; }
 
 .legend-goes-here {
   display: table;
-  margin: 20px auto 0; }
+  margin: 12px auto 0;
+  width: 100%; }
+  .legend-goes-here .tile-box {
+    border: 4px solid #FFC700;
+    box-sizing: border-box;
+    padding: 20px;
+    text-align: center; }
+    .legend-goes-here .tile-box h5 {
+      font-size: 20px;
+      color: #4c4c4c; }
+    .legend-goes-here .tile-box h2 {
+      font-style: normal;
+      font-weight: 600;
+      font-size: 72px;
+      color: #00C5D2;
+      padding-top: 15px;
+      line-height: 141.5%; }
+    .legend-goes-here .tile-box p {
+      font-size: 16px;
+      color: #9DA6AF;
+      line-height: 23px; }
+  .legend-goes-here .list-chart-div ul li {
+    color: #4C4C4C;
+    display: grid;
+    font-size: 14px;
+    grid-template-columns: auto 1fr auto;
+    grid-gap: 15px;
+    align-items: center;
+    margin: 20px 0px; }
 
 .legend-guide {
   display: grid;
